--- a/index.css
+++ b/index.css
@@ -351,7 +351,7 @@ span{
     }
     .nav-bar ul {
         width: fit-content;
-        margin: 20px auto 0 auto;
+        margin-top: 20px;
         text-align: center;
         transition: 0.5s;
         opacity: 0;
@@ -361,7 +361,7 @@ span{
     }
     .nav-bar ul li a{
         /* margin-bottom: 100px; */
-        margin: 0 50px;
+        margin: 0 40px;
     }
     /* .nav-bar ul li a:hover{
         color: black;
@@ -388,31 +388,31 @@ span{
         margin-left: 30%;
     }
     .final{
-        margin-right: 50px;
-        margin-left: 5%;
+        margin-right: 30px;
+        margin-left: 1%;
         color: white;
         text-align: center;
     }
     .final1, .final2{
-        margin-right: 40px;
+        margin-right: 30px;
         text-align: center;
         
     }
     span{
         color: white;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: bold;
         /* margin-left: ; */
     }
     .loc{
         color: white;
         width: 100px;
-        font-size: 12px;
+        font-size: 10px;
     }
     .looo{
         color: white;
         width: 150px;
-        font-size: 13px;
+        font-size: 10px;
         margin-top: 17px;
     }
     .llll{
