--- a/index.css
+++ b/index.css
@@ -323,6 +323,7 @@ span{
     header{
         padding: 0 30px;
     }
+  
 }
 @media only screen and (max-width: 900px){
     .hamburger{
@@ -343,7 +344,7 @@ span{
         right: 0;
         width: 100vw;
         background: rgb(2, 2, 59);;
-        transition: 0.5s;
+        /* transition: 0.5s; */
         overflow: hidden;
     }
     .nav-bar.links{
@@ -370,7 +371,104 @@ span{
         padding-top: 130px;
     }
     .contt{
-        height: 22vh;
+        height: 33vh;
+        /* width: 150%; */
+    }
+    .radius, .radius1, .radius2{
+        width: 30%;
+    }
+    .para1{
+        font-size: 15px;
+    }
+    .free{
+        margin-top: 30px;
+        margin-left: 30%;
+    }
+    .final{
+        margin-right: 30px;
+        margin-left: 1%;
+        color: white;
+        text-align: center;
+    }
+    .final1, .final2{
+        margin-right: 30px;
+        text-align: center;
+        
+    }
+    span{
+        color: white;
+        font-size: 10px;
+        font-weight: bold;
+        /* margin-left: ; */
+    }
+    .loc{
+        color: white;
+        width: 100px;
+        font-size: 10px;
+    }
+    .looo{
+        color: white;
+        width: 150px;
+        font-size: 10px;
+        margin-top: 17px;
+    }
+    .llll{
+        width: 30px;
+        margin-left: 5px;    
+    }
+    .main6{
+        height: 25vh;
+    }
+    
+}
+
+@media only screen and (max-width: 600px){
+    .hamburger{
+        display: block;
+        cursor: pointer;
+    }
+    .hamburger .line{
+        width: 30px;
+        height: 3px;
+        background: white;
+        margin: 6px 0;
+    }
+    .nav-bar{
+        height: 0;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        right: 0;
+        width: 100vw;
+        background: rgb(2, 2, 59);;
+        /* transition: 0.5s; */
+        overflow: hidden;
+    }
+    .nav-bar.links{
+        height: 50px;
+    }
+    .nav-bar ul {
+        width: fit-content;
+        margin-top: 20px;
+        text-align: center;
+        transition: 0.5s;
+        opacity: 0;
+    }
+    .nav-bar.links ul{
+        opacity: 1;
+    }
+    .nav-bar ul li a{
+        /* margin-bottom: 100px; */
+        margin: 0 40px;
+    }
+    .par1{
+        font-size: 20px;
+    }
+    .port, .abt, .cont, .main2{
+        padding-top: 130px;
+    }
+    .contt{
+        height: 33vh;
         /* width: 150%; */
     }
     .radius, .radius1, .radius2{
