--- a/index.css
+++ b/index.css
@@ -325,7 +325,7 @@ span{
     }
   
 }
-@media only screen and (max-width: 900px){
+/* @media only screen and (max-width: 900px){
     .hamburger{
         display: block;
         cursor: pointer;
@@ -420,7 +420,7 @@ span{
         height: 25vh;
     }
     
-}
+} */
 
 @media only screen and (max-width: 600px){
     .hamburger{
